tests/integration/snapshots/integration__conformance__n_object_two_commas_in_a_row.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
{"a":"b",,"c":"d"}
stdout ---

stderr ---
error: expected key, found `,`
 --> stdin:1:10
  |
1 | {"a":"b",,"c":"d"}
  |         -^
  |         |
  |         expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - {"a":"b",,"c":"d"}
1 + {"a":"b","c":"d"}
  |
