tests/integration/snapshots/integration__conformance__n_object_unquoted_key.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
{a: "b"}
stdout ---

stderr ---
error: unexpected character `a`. expected start of a json value
 --> stdin:1:2
  |
1 | {a: "b"}
  |  ^
