tests/integration/snapshots/integration__conformance__n_object_unterminated-value.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{"a":"a
stdout ---

stderr ---
error: expected closing quote
 --> stdin:1:7
  |
1 | {"a":"a
  |      -^
  |      |
  |      opening quote found here
  |
help: insert the missing closing quote
  |
1 | {"a":"a"
  |        +
