tests/integration/snapshots/integration__conformance__n_object_unterminated-value.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
{"a":"a
stdout --- 
<empty>
stderr --- 
error: expected closing quote
 --> stdin:1:7
  |
1 | {"a":"a
  |      -^
  |      |
  |      opening quote found here
  |
help: insert the missing closing quote
  |
1 | {"a":"a"
  |        +
